two version of  stackBlur + grunt building script

--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "blur",
     "stackblur"
   ],
-  "license": "?",
+  "license": "MIT",
   "ignore": [
     "node_modules",
     "bower_components",
