--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "Blur.js",
   "version": "0.2.0",
-  "homepage": "https://github.com/korpirkor/Blur.js",
+  "homepage": "https://github.com/CezaryDanielNowak/Blur.js",
   "authors": [
     "Jacob Kelley <jakie8@gmail.com>",
     "Cezary Daniel Nowak <cezary.nowak@gmail.com>"
